[project]
name = "contador"
version = "0.1.0"
description = ""
authors = [
    {name = "opropriofabricio",email = "fabricio.mh@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nicegui (>=2.23.3,<3.0.0)",
    "flet (>=0.28.3,<0.29.0)",
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
